# simple-rag-backend

./: README.md  hello.py  pyproject.toml
app/: config.py  database.py  main.py
app/llm_handler/: llm_handler.py
app/models/: document.py  query.py
app/routers/: embeddings.py  users.py
app/services/: embedding_handler.py  pdf_extractor.py
